unpackaged/main/default/objects/Meeting__c/Meeting__c.object-meta.xml
<CustomObject>
    <description>Used to record and collaborate meeting information</description>
    <label>Meeting Notes</label>
    <nameField>
        <displayFormat>MT-{000000}</displayFormat>
        <label>Meeting</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meeting Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>