unpackaged/main/default/objects/Meeting__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Meeting Notes</relationshipLabel>
    <relationshipName>Meeting_Notes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>