unpackaged/main/default/objects/Meeting__c/fields/AE_Notes__c.field-meta.xml
<CustomField>
    <fullName>AE_Notes__c</fullName>
    <label>Account Owner Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>