unpackaged/main/default/objects/Meeting__c/fields/Gong_Conversation__c.field-meta.xml
<CustomField>
    <fullName>Gong_Conversation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gong Conversation</label>
    <referenceTo>Gong__Gong_Call__c</referenceTo>
    <relationshipLabel>Meeting Notes</relationshipLabel>
    <relationshipName>Meeting_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>