unpackaged/main/default/objects/Meeting__c/fields/Meeting_Length__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Length__c</fullName>
    <inlineHelpText>Time in Minutes</inlineHelpText>
    <label>Meeting Length</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>