unpackaged/main/default/objects/Meeting__c/fields/Meeting_Topic__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Topic__c</fullName>
    <description>A multi-select field to indicate one or more of the topics shown during the demo, for better reporting.</description>
    <label>Meeting Topic</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Meeting_Topics</valueSetName>
    </valueSet>
</CustomField>