unpackaged/main/default/objects/Meeting__c/fields/Meeting_Type__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Type__c</fullName>
    <label>Meeting Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Intro Call</fullName>
            </value>
            <value>
                <fullName>Discovery</fullName>
            </value>
            <value>
                <fullName>Demo</fullName>
            </value>
            <value>
                <fullName>Followup</fullName>
            </value>
            <value>
                <fullName>Trial</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
                <label>Security/Legal</label>
            </value>
            <value>
                <fullName>Negotiations</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Sales Call</fullName>
            </value>
            <value>
                <fullName>Success Call</fullName>
            </value>
            <value>
                <fullName>Implementation</fullName>
            </value>
            <value>
                <fullName>POC</fullName>
            </value>
            <value>
                <fullName>Secluded POC</fullName>
            </value>
            <value>
                <fullName>Integrated POC</fullName>
            </value>
            <value>
                <fullName>Full POC</fullName>
            </value>
            <value>
                <fullName>POC Planning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>