unpackaged/main/default/objects/Meeting__c/fields/Sales_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Sales_Engineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Technical Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Meetings</relationshipName>
    <type>Lookup</type>
</CustomField>