unpackaged/main/default/objects/Meeting__c/fields/Sales_Engineer_Notes__c.field-meta.xml
<CustomField>
    <fullName>Sales_Engineer_Notes__c</fullName>
    <label>Technical Owner Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>